# nex

./: README.md  ai.md
.github/workflows/: build-cli.yml
backend/: .gitignore  package-lock.json  package.json  server.js
backend/models/: Package.js  PackageVersion.js  Review.js  User.js
backend/public/: 404.html  500.html  dashboard.html  index.html  login.html  publish.html  sitemap-0.xml  sitemap-index.xml
backend/public/403/: index.html
backend/public/502/: index.html
backend/public/_astro/: about.BEQDDjDH.css  docs.Du7yMFql.css  hoisted.BRtEQnZp.js  index.Bw5adv7b.css  index.DfKK6_-z.css  view.BcY6XAuX.css
backend/public/about/: index.html
backend/public/blog/: index.html
backend/public/cli-reference/: index.html
backend/public/contact/: index.html
backend/public/docs/: index.html
backend/public/faq/: index.html
backend/public/getting-started/: index.html
backend/public/nexdocs/: index.html
backend/public/nexpackages/: index.html
backend/public/status/: index.html
backend/routes/: auth.js  packages.js
cli/: CMakeLists.txt  install.ps1  install.sh  test.sh
cli/include/: nex.h
cli/src/: main.c
cli/src/commands/: alias.c  config.c  init.c  publish.c  run.c  self_update.c
cli/src/package/: manager.c
cli/src/utils/: utils.c
docs/: architecture.md  cli-usage.md  package-authoring.md
docs/examples/: nex.json.pagepull.example
frontend/: astro.config.mjs  package-lock.json
frontend/src/layouts/: ErrorLayout.astro  Layout.astro
frontend/src/pages/: 403.astro  (+6 more)
registry/: index.json
registry/schema/: package.schema.json
(+3 files in other folders)
